Implementation of Advanced Search Activity. Some modifications and fixed issues.